NIFI-13989 Reduced constructors in JsonTreeRowRecordReader to one (#9506)
Signed-off-by: David Handermann <exceptionfactory@apache.org>